# ez-order

app/backend/: main.py  pyproject.toml  server.py
app/backend/model/: item.py  order.py  user.py  vendor.py
app/backend/payment/: endpoints.py
app/backend/tests/: test_ez_order.py
app/frontend/: package-lock.json  package.json
app/frontend/src/: index.tsx
app/frontend/src/components/App/: index.tsx
app/frontend/src/components/MenuItem/: index.tsx  styles.module.css
app/frontend/src/components/StallCard/: index.tsx  styles.module.css
app/frontend/src/containers/MenuContainer/: index.tsx  styles.module.css
app/frontend/src/containers/StallContainer/: index.tsx  styles.module.css
app/frontend/src/pages/MenuPage/: index.tsx  menu.tsx  styles.module.css
app/frontend/src/pages/StallsPage/: index.tsx  styles.module.css
