[tool.poetry]
name = "ez-order"
version = "0.1.0"
description = ""
authors = ["Irham <m.irham.agung@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
stripe = "^2.56.0"
pydantic = "^1.8"
typing = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
